Fix layout on ie9

--- a/underbar.php/sass/styles.sass
+++ b/underbar.php/sass/styles.sass
@@ -155,8 +155,9 @@ td
       padding: 0.5em * baseline-line-height() 8px
       color: $black-color
 
-    h2
+    strong
       @include baseline-font(20)
+      display: block
       color: inherit
       background-color: inherit
       padding: 0
